Cleaned up test suite